pl 38
	- bf: \> \! \ff (crescendo overlap)
	- misc feta-fixes, flageolet sign.
	- midi tempo fixes.
pl 37.jcn3
	- max beam slope "compile time parameterised" and set to 0.6
	  (oh, how we need runtime generated beams!)
	- beam's left y-pos quantisation
	- beam slopes' y-span quantisation
	- stem.ly

pl 37.jcn2
	- feta: fixed sizes small numerals + flageolet


*******
dec 12
pl 37
	- --postscript
	- don't crash non-fitting grouping (thx, John)
	- attach unended spanners to a column (thanks John)
	- bf: unended tie
	- bf: tie direction
	- bf: unended slur

pl 36.jcn2
	- feta: small numerals
	
********
dec 9

pl 36
	- bf: notehead collisions
	- bf: dot y-position
	- use Item::break_priority_i_ for horizontal alignment of breakables.
	(it still sucks)
	- junk some derivation checks, junk Normal_*_bar
	- FlowerLib fixes.
	- twinkle fixes.
	- feta: flag/clefspacing


*******
dec 5
pl 35
	- naming: lily-init iso symbol.ly
	- mf braces
	- center textscripts.

pl 34.jcn1
	- mf: nicening of dyn, klef, rest
	- fingerfont
	- bf: 12/8
	

********
dec 2
pl 34
	- bf: mf: numbers and alto clef
	- bf: scsi-menuet
	- PS crescendos
	- ly2dvi diffs (JAF)
	- debian diffs (AF)
	- w32 doco fix (JCN)


********
nov 24

pl 33
	- added abbrev.ly to font.ly; rm'd abbrev.ly
	- don't process scores on parse errors.
	- bf: kortjakje.ly
	- bf: invisible stems in beams (abbrev.ly)
	- lytodvi script (JAF)
	- output Paper_def settings to TeX file. (eg: linewidth)

********
nov 19
pl 32
	- change type checks (ughugh) to derivation checks (ugh)
	- this fixes clef bug.
	- bf: order of breakables: meter comes after bar.
	- bf: do error iso coredump on unknown symbol-table
	- bf: release.py, copy patch too. 
	- bf: add makefile dep for disting MF logs.
	- bf: don't read font-en-tja*.ly, but feta*.ly

pl 31.jcn2
	- first version of (non-ugh) c-klef
	- bf: mi2mu: notes of zero duration as comments
	- feta: ugh c clef


********
nov 17

pl 31
	- bf: replaced Score_column assert by a warning (thanks Scott)