@@ -10,7 +10,7 @@ TestedFeatures =	 "beams and beamflags";
 \version "0.1.7";
 
 \score{
-	\melodic \multi 3 < 
+	\melodic { \multi 3 < 
 		{ \octave c'; 
 			\meter 8/4;
 			\duration8;
@@ -23,6 +23,7 @@ TestedFeatures =	 "beams and beamflags";
 			\stemup [c c'' a' f']
 			\duration128;
 			\stemup [c c'' a' f']
+			r32
 
 			\duration 8;
 			\stemup ['g 'g 'g 'g]
@@ -34,6 +35,7 @@ TestedFeatures =	 "beams and beamflags";
 			\stemup ['g 'g 'g 'g]
 			\duration 128;
 			\stemup ['g 'g 'g 'g]
+			r32
 		}
 	
 	{ \octave c'; 
@@ -48,6 +50,7 @@ TestedFeatures =	 "beams and beamflags";
 			\stemdown [a' 'a c e]
 			\duration128;
 			\stemdown [a' 'a c e]
+			r32
 
 			\octave c;
 			\duration 8;
@@ -60,7 +63,27 @@ TestedFeatures =	 "beams and beamflags";
 			\stemdown [d'' d'' d'' d'']
 			\duration 128;
 			\stemdown [d'' d'' d'' d'']
+			r32
+		} >
+		{
+			% ugh, "duration mode"
+			\duration 8;
+			[g8 g] [a a] [b b] [c' c']
+			\duration 16;
+			[g16 g g g] [a a a a] [b b b b] [c' c' c' c']
+			\meter 4/4;
+			\duration 32;
+			[g32 g g g g g g g] [a a a a a a a a] 
+			[b b b b b b b b] [c' c' c' c' c' c' c' c']
+			\duration 64;
+			\meter 2/4;
+			[g64 g g g g g g g g g g g g g g g]
+			[c' c' c' c' c' c' c' c' c' c' c' c' c' c' c' c']
 		}
-	>}
+	}
+	\paper{
+		gourlay_maxmeasures = 1.;
+	}
+}
 
 
