@@ -16,6 +16,8 @@
 class Beam:  public Directional_spanner {
 public:
   enum Pos { NONE, SIT = 1, STRADDLE = 2, HANG = 4, INTER = 8 };
+  // ugh, silly C++
+  enum Quantise { NUN, NORMAL, TRADITIONAL };
 
   Link_array<Stem> stems;
   /// the slope of the beam in posns / point (dimension)   
@@ -23,7 +25,12 @@ public:
 
   /// position of leftmost end of beam  
   Real left_y;
-   
+  /// should beam slope be damped? 0: no, 1: yes, 100000: horizontal beams
+  int damping_i_;
+  /// should beam pos / slope be quantised? 0: no, 1: yes, 2: traditional
+  Quantise quantisation_;
+  /// maximum number of beams (for opening-up of beam-spacing)
+  int multiple_i_;
 
   /* *************** */
   DECLARE_MY_RUNTIME_TYPEINFO;
