@@ -1,5 +1,5 @@
 % Creator: mf-to-table.py version 0.4
-% Automatically generated on Wed Dec 24 16:30:29 1997
+% Automatically generated on Mon Dec 29 10:52:03 1997
 % Do not edit
 % input from out/feta20.log
 % name
